# sqldeep

./: .gitignore  .gitmodules  CLAUDE.md  NOTICES  README.md  STABILITY.md  agents-guide.md  bullseye.yaml  compile_flags.txt  mkfile  sqldeep.cpp  sqldeep.h  sqldeep_c.cpp  sqldeep_c.h
.github/workflows/: ci.yml  release.yml
cmd/: sqldeep.c  sqldeep.cpp  sqldeep_agent_guide.inc
docs/: TODO.md  audit-log.md  convergence-report.md  targets.md
docs/papers/: array-subquery-double-wrap-bug.md  fixed-point-comprehensions.md  output-modes.md  xml-literals.md
examples/: demo.cpp
go/sqldeep/: cgo.go  doc.go  go.mod  go.sum  smoke_test.go  sqldeep.go  sqldeep_auto.c  sqldeep_auto.h  sqldeep_test.go
kotlin/: build.gradle.kts  desktop_smoke_test.kt  desktop_test.kt  gradle.properties  settings.gradle.kts
kotlin/src/androidTest/assets/: sqlite.yaml
kotlin/src/androidTest/kotlin/com/marcelocantos/sqldeep/: SQLiteIntegrationTest.kt
kotlin/src/main/: AndroidManifest.xml
kotlin/src/main/jni/: CMakeLists.txt  sqldeep_jni.c
kotlin/src/main/kotlin/com/marcelocantos/sqldeep/: SQLDeep.kt  SQLDeepRuntime.kt  SQLDeepTestHelper.kt
swift/: Package.swift
swift/Sources/CSQLDeep/: shim.c
swift/Sources/CSQLDeep/include/: module.modulemap  sqldeep.h
swift/Sources/SQLDeepRuntime/: SQLDeepRuntime.swift  Transpiler.swift
swift/Tests/SQLDeepRuntimeTests/: SQLiteIntegrationTests.swift  sqlite.yaml
testdata/: sqlite.yaml  transpile.yaml
tests/: doctest_main.cpp  test_sqlite.cpp  test_transpile.cpp
